# Akshar

./: .buildinfo  .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  example_features.ipynb  index.html  learning copy.ipynb  learning.ipynb  pyproject.toml  requirements.txt  search.html  searchindex.js  test.txt
.doctrees/: index.doctree
.doctrees/api/: cli_api.doctree  normalize.doctree  phonetic.doctree  schwa.doctree  script_utils.doctree  segment.doctree  tokenizer.doctree  transliteration.doctree  visarga.doctree  viz.doctree
.doctrees/features/: overview.doctree  phonetic_radar.doctree
.doctrees/tutorials/: features_demo.doctree
.github/workflows/: pages.yml
_modules/akshar/: cli.html  features.html  phonetic.html  sandhi.html  segment.html  transliteration.html  vedic.html  viz.html
_sources/: cli.rst.txt
_sources/api/: anusvara.rst.txt  app.rst.txt  cli_api.rst.txt  features.rst.txt  index.rst.txt  morph.rst.txt  sandhi.rst.txt  schwa.rst.txt  script_utils.rst.txt  segment.rst.txt  viz.rst.txt
_sources/features/: graphemes.rst.txt  overview.rst.txt  phonetic_radar.rst.txt
_static/: custom.css
api/: morph.html  normalize.html  phonetic.html  schwa.html  script_utils.html  segment.html  tokenizer.html  transliteration.html  visarga.html
data/: corpus.txt
docs/: deploy_docs.sh
features/: graphemes.html  overview.html  phonetic_radar.html
root/: .buildinfo.bak  .gitignore  cli.html  genindex.html  installation.html  objects.inv  py-modindex.html  quickstart.html
root/.doctrees/: cli.doctree  environment.pickle  installation.doctree  quickstart.doctree
root/_modules/: index.html
root/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
root/_static/: custom.js
root/api/: anusvara.html  app.html  (+6 more)
scripts/: to publish doc.txt  train_bpe.py  train_spm.py
tests/: __init__.py  test_normalize.py  test_segment.py  test_tokenizer.py
tutorials/: basic.html
(+50 files in other folders)
